--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static %}
+
 {% block content %}
 <h1>MENU</h1>
 <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -8,7 +8,7 @@
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"><span
                     id="accordion-head">Accordion Item #1</span>
-                <img src="{% static '/post-sample-image.jpg' %}" alt="home" />
+                <img src="" alt="home" />
 
             </button>
         </h2>
