--- a/templates/reservations.html
+++ b/templates/reservations.html
@@ -2,8 +2,11 @@
 
 {% block content %}
 <h1>reservations</h1>
-
-
+<form action="/" method="post">
+    {% csrf_token %}
+    {{ form.as_table }}
+    <input type="submit" value="Submit">
+</form>
 
 {%endblock%}
 
