--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
-<h1>MENU</h1>
+<h1>HOME</h1>
 <div class="accordion accordion-flush" id="accordionFlushExample">
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"><span
                     id="accordion-head">Accordion Item #1</span>
-                <img src="" alt="home" />
+                <img src="{% static 'images/myimage.jpg' %}" alt="home" />
 
             </button>
         </h2>
@@ -49,10 +49,5 @@
     </div>
 </div>
 
-<h1>Menu List</h1>
-<ul>
-    {% for item in items %}
-    <li>{{ item.name }} </li>
-    {% endfor %}
-</ul>
+
 {% endblock %}
