--- a/templates/reservations.html
+++ b/templates/reservations.html
@@ -2,12 +2,13 @@
 
 {% block content %}
 <h1>reservations</h1>
-<form action="/" method="post">
-    {% csrf_token %}
-    {{ form.as_table }}
-    <input type="submit" value="Submit">
-</form>
-
+<div class="form">
+    <form action="/" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Submit">
+    </form>
+</div>
 {%endblock%}
 
 <!-- Sample for displaying bookings for staff section -->
