Added Crispy Forms and styled HTML for bookings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,3 +17,12 @@
     justify-content: center;
     text-align: center;
 }
+
+/* .form-select {
+    background-color: #f8f9fa;
+    border: none;
+    border-radius: 0;
+    height: auto;
+    padding: .5rem;
+    width: 100%;
+} */
