--- a/templates/testTemplates.html
+++ b/templates/testTemplates.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 {% load crispy_forms_tags %}
 
@@ -37,8 +37,8 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.special_requests.id_for_label }}">Special Request</label>
-                            {{ form.special_requests|as_crispy_field }}
+                            <label for="{{ form.special_request.id_for_label }}">Special Request</label>
+                            {{ form.special_request }}
                         </div>
                         <div class="form-group">
                             <label for="{{ form.party_size.id_for_label }}">Party Size</label>
@@ -51,4 +51,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %} -->
