--- a/templates/successful_booking.html
+++ b/templates/successful_booking.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h1>Congratulations</h1>
+<p>Booking Created: {{latest_booking.created_on}}</p>
 <p>Name: {{ latest_booking.name }}</p>
 <p>Email: {{ latest_booking.email }}</p>
 <p>Date: {{ latest_booking.date }}</p>
