--- a/templates/login.html
+++ b/templates/login.html
@@ -7,4 +7,5 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
 </form>
+<p>Need to Sign Up? <a href="{% url 'signup' %}">Sign up</a></p>
 {% endblock %}
