--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,11 +18,21 @@
     text-align: center;
 }
 
-/* .form-select {
-    background-color: #f8f9fa;
-    border: none;
-    border-radius: 0;
-    height: auto;
-    padding: .5rem;
-    width: 100%;
-} */
+.signup,
+.login {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+
+.signup-link {
+    display: block;
+    justify-content: center;
+    text-align: center;
+    margin: 2rem 0;
+}
+
+#login-btn {
+    margin: 2rem 0;
+}
