--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,11 +1,17 @@
 {% extends "base.html" %}
+{% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <h1>Sign Up</h1>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign up</button>
-</form>
+<div class="signup">
+
+    <form method="post">
+        {% csrf_token %}
+        {{ form|crispy}}
+        <button id="login-btn" class="btn btn-outline-primary" type="submit">Login</button>
+    </form>
+
+</div>
 {%endblock%}
