--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,13 @@
             </div>
         </nav>
     </header>
+    {% if user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a>
+    <span>Welcome, {{ user.username }}</span>
+    {% else %}
+    <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'reservations' %}">Sign up</a>
+    {% endif %}
 
     {% block content %}
     <!--  -->
