--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,11 @@
                         <a class="nav-link" href="{% url 'menu' %}">Menu</a>
                     </li>
                     <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'user_reservations' %}">Reservations</a>
+                        {% else %}
                         <a class="nav-link" href="{% url 'login' %}">Reservations</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
