--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                     </li>
                     <li class="nav-item">
                         {% if user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'user_reservations' %}">Reservations</a>
+                        <a class="nav-link" href="{% url 'reservations' %}">Reservations</a>
                         {% else %}
                         <a class="nav-link" href="{% url 'login' %}">Reservations</a>
                         {% endif %}
