--- a/templates/base.html
+++ b/templates/base.html
@@ -20,35 +20,7 @@
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <a class="navbar-brand" href="#">Restaurant</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'index' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'menu' %}">Menu</a>
-                    </li>
-                    <li class="nav-item">
-                        {% if user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'reservations' %}">Reservations</a>
-                        {% else %}
-                        <a class="nav-link" href="{% url 'login' %}">Reservations</a>
-                        {% endif %}
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+    {% include 'header.html' %}
     {% if user.is_authenticated %}
     <a href="{% url 'logout' %}">Logout</a>
     <span>Welcome, {{ user.username }}</span>
@@ -61,32 +33,7 @@
     <!--  -->
     {% endblock content %}
     <!-- Footer -->
-    <footer class="bg-light">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <ul class="list-unstyled">
-                        <li class="d-inline-block mx-3">
-                            <a href="#">
-                                <i class="fab fa-facebook fa-lg"></i>
-                            </a>
-                        </li>
-                        <li class="d-inline-block mx-3">
-                            <a href="#">
-                                <i class="fab fa-twitter fa-lg"></i>
-                            </a>
-                        </li>
-                        <li class="d-inline-block mx-3">
-                            <a href="#">
-                                <i class="fab fa-instagram fa-lg"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 text-center">
-                    <p>&copy; 2023 Restaurant Copyright. For Educational purposes.</p>
+    {% include 'footer.html' %}
 </body>
 
 </html>
