--- a/templates/successful_booking.html
+++ b/templates/successful_booking.html
@@ -1,38 +1,44 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Your Reservations</h2>
-<table>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Date</th>
-            <th>Time</th>
-            <th>Party Size</th>
-            <th>Status</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for reservation in reservations %}
-        <tr>
-            <td>{{ reservation.name }}</td>
-            <td>{{ reservation.email }}</td>
-            <td>{{ reservation.date }}</td>
-            <td>{{ reservation.time }}</td>
-            <td>{{ reservation.party_size }}</td>
-            <td>{{ reservation.status }}</td>
-            <td>
-                <!-- Add edit and delete reservation links here -->
-                <a href="{% url 'delete_reservation' reservation_id=reservation.id %}">Delete Reservation</a>
-            </td>
-        </tr>
-        {% empty %}
-        <tr>
-            <td colspan="7">You have no reservations.</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="container mt-5">
+    <h2>Your Reservations</h2>
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Party Size</th>
+                <th>Special Requests</th>
+                <th>Status</th>
+                <th>Created On</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for reservation in reservations %}
+            <tr>
+                <td>{{ reservation.name }}</td>
+                <td>{{ reservation.email }}</td>
+                <td>{{ reservation.date }}</td>
+                <td>{{ reservation.time }}</td>
+                <td>{{ reservation.party_size }}</td>
+                <td>{{ reservation.status }}</td>
+                <td>{{ reservation.special_requests }}</td>
+                <td>{{ reservation.created_on }}</td>
+                <td>
+                    <!-- Add edit and delete reservation links here -->
+                    <a href="{% url 'delete_reservation' reservation_id=reservation.id %}">Delete Reservation</a>
+                </td>
+            </tr>
+            {% empty %}
+            <tr>
+                <td colspan="9">You have no reservations.</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
