STYLING: Restyled Footer using bootsrap

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,29 +1,29 @@
-<footer class="bg-light">
-    <div class="container-fluid">
+<footer class="bg-light py-4">
+    <div class="container">
         <div class="row">
             <div class="col-12 text-center">
                 <ul class="list-unstyled">
-                    <li class="d-inline-block mx-3">
-                        <a href="#">
-                            <i class="fab fa-facebook fa-lg"></i>
+                    <li class="d-inline-block mx-2">
+                        <a href="#" class="text-decoration-none">
+                            <i class="fab fa-facebook fa-2x"></i>
                         </a>
                     </li>
-                    <li class="d-inline-block mx-3">
-                        <a href="#">
-                            <i class="fab fa-twitter fa-lg"></i>
+                    <li class="d-inline-block mx-2">
+                        <a href="#" class="text-decoration-none">
+                            <i class="fab fa-twitter fa-2x"></i>
                         </a>
                     </li>
-                    <li class="d-inline-block mx-3">
-                        <a href="#">
-                            <i class="fab fa-instagram fa-lg"></i>
+                    <li class="d-inline-block mx-2">
+                        <a href="#" class="text-decoration-none">
+                            <i class="fab fa-instagram fa-2x"></i>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 text-center">
-                <p>&copy; 2023 Restaurant Copyright. For Educational purposes.</p>
+            <div class="col-12 text-center mt-3">
+                <p class="mb-0">&copy; 2023 Restaurant Copyright. For Educational purposes.</p>
             </div>
         </div>
     </div>
