Added links for footer elements and restyled header element to inculde logout in nav bar

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,20 +1,20 @@
-<footer class="bg-light py-4">
+<footer class="footer bg-dark py-5">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                <ul class="list-unstyled">
-                    <li class="d-inline-block mx-2">
-                        <a href="#" class="text-decoration-none">
+                <ul class="list-inline mb-4">
+                    <li class="list-inline-item mx-2">
+                        <a href="https://www.facebook.com/" class="text-white" target="_blank">
                             <i class="fab fa-facebook fa-2x"></i>
                         </a>
                     </li>
-                    <li class="d-inline-block mx-2">
-                        <a href="#" class="text-decoration-none">
+                    <li class="list-inline-item mx-2">
+                        <a href="https://www.twitter.com/" class="text-white" target="_blank">
                             <i class="fab fa-twitter fa-2x"></i>
                         </a>
                     </li>
-                    <li class="d-inline-block mx-2">
-                        <a href="#" class="text-decoration-none">
+                    <li class="list-inline-item mx-2">
+                        <a href="https://www.instagram.com/" class="text-white" target="_blank">
                             <i class="fab fa-instagram fa-2x"></i>
                         </a>
                     </li>
@@ -22,8 +22,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 text-center mt-3">
-                <p class="mb-0">&copy; 2023 Restaurant Copyright. For Educational purposes.</p>
+            <div class="col-12 text-center">
+                <p class="mb-0 text-white">&copy; 2023 Restaurant Copyright. For Educational purposes.</p>
             </div>
         </div>
     </div>
