--- a/templates/header.html
+++ b/templates/header.html
@@ -1,32 +1,40 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="#">Restaurant</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'index' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'menu' %}">Menu</a>
-                </li>
-                <li class="nav-item">
-                    {% if user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'reservations' %}">Reservations</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'user_reservations' %}">My Reservations</a></li>
-                {% else %}
-                <a class="nav-link" href="{% url 'login' %}">Reservations</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Restaurant</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'index' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'menu' %}">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'reservations' %}">Reservations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'user_reservations' %}">My Reservations</a></li>
+                    {% else %}
+                    <a class="nav-link" href="{% url 'login' %}">Reservations</a>
+                    {% endif %}
+                    </li>
+                </ul>
+                {% if user.is_authenticated %}
+                <div class="d-flex">
+                    <span class="navbar-text me-3">Welcome, {{ user.username }}</span>
+                    <a class="btn btn-outline-light" href="{% url 'logout' %}">Logout</a>
+                </div>
                 {% endif %}
-                </li>
-            </ul>
+            </div>
         </div>
     </nav>
 </header>
