--- a/templates/header.html
+++ b/templates/header.html
@@ -9,28 +9,35 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'index' %}">Home</a>
+                        <a class="nav-link{% if request.resolver_match.url_name == 'index' %} active{% endif %}"
+                            href="{% url 'index' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                        <a class="nav-link{% if request.resolver_match.url_name == 'about' %} active{% endif %}"
+                            href="{% url 'about' %}">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'menu' %}">Menu</a>
+                        <a class="nav-link{% if request.resolver_match.url_name == 'menu' %} active{% endif %}"
+                            href="{% url 'menu' %}">Menu</a>
                     </li>
                     <li class="nav-item">
                         {% if user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'reservations' %}">Reservations</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user_reservations' %}">My Reservations</a></li>
+                    <li class="nav-item"></li>
+                    <a class="nav-link{% if request.resolver_match.url_name == 'reservations'  %} active{% endif %}"
+                        href="{% url 'reservations' %}">Reservations</a></li>
+                    <li class="nav-item"> <a
+                            class="nav-link{% if request.resolver_match.url_name == 'user_reservations' %} active{% endif %}"
+                            href="{% url 'user_reservations' %}">My Reservations</a></li>
                     {% else %}
-                    <a class="nav-link" href="{% url 'login' %}">Reservations</a>
+                    <li class="nav-item"></li>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'login'  %} active{% endif %}"
+                        href="{% url 'login' %}">Reservations</a></li>
                     {% endif %}
                     </li>
                 </ul>
                 {% if user.is_authenticated %}
                 <div class="d-flex">
-                    <span class="navbar-text me-3">Welcome, {{ user.username }}</span>
+                    <span class="navbar-text me-3 text-white">Welcome, {{ user.username }}</span>
                     <a class="btn btn-outline-light" href="{% url 'logout' %}">Logout</a>
                 </div>
                 {% endif %}
