--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,18 @@
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"><span
+                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                <img class="image-one" src="{% static 'images/myimage.jpg' %}" alt="home" /><span
                     id="accordion-head">Accordion Item #1</span>
-                <img src="{% static 'images/myimage.jpg' %}" alt="home" />
+
 
             </button>
         </h2>
         <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum molestiae
+                quos nisi consequatur consequuntur eaque nulla doloribus recusandae quidem vero placeat corporis earum,
+                iure accusantium dicta, optio perferendis architecto necessitatibus.
                 <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
         </div>
     </div>
@@ -27,7 +30,9 @@
         </h2>
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+            <div class="accordion-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis cumque
+                perspiciatis iure maxime nisi sit minus quo error, blanditiis voluptates deserunt tempore eaque dolor
+                quas sunt aliquid illo facere repellendus.
                 <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
                 filled with some actual content.</div>
         </div>
@@ -41,7 +46,9 @@
         </h2>
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore reiciendis
+                tenetur itaque vel perspiciatis porro. Accusamus ipsa cumque cupiditate! Praesentium nihil dicta
+                excepturi vero harum maiores. Omnis fugiat nemo inventore?
                 <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
                 happening here in terms of content, but just filling up the space to make it look, at least at first
                 glance, a bit more representative of how this would look in a real-world application.</div>
