Added edit function in views and stlyed HTML for forms and delete function

--- a/templates/edit_reservation.html
+++ b/templates/edit_reservation.html
@@ -1,7 +1,6 @@
-{% extends "base.html" %}
-
-{% load crispy_forms_tags %}
+{% extends 'base.html' %}
 
 {% block content %}
+<h2>Edit Reservation</h2>
 {% include 'reservation_form.html' %}
 {% endblock %}
