--- a/templates/successful_booking.html
+++ b/templates/successful_booking.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
+{% include 'cancel_reservation_modal.html' %}
 <div class="container mt-5">
     <h2>Your Reservations</h2>
     <table class="table table-striped table-bordered">
@@ -32,10 +33,9 @@
                     <!-- Add edit and delete reservation links here -->
                     <a href="{% url 'edit_reservation' reservation_id=reservation.id %}" class="btn btn-primary">Edit
                         Reservation</a>
-                    <a href="{% url 'delete_reservation' reservation_id=reservation.id %}"
-                        onclick="return confirm('Are you sure you want to cancel this reservation?');"
-                        class="btn btn-danger">Delete
-                        Reservation</a>
+                    <a href="#" data-reservation-id="{{ reservation.id }}"
+                        data-delete-url="{% url 'delete_reservation' reservation_id=reservation.id %}"
+                        class="btn btn-danger cancel-reservation-btn">Delete Reservation</a>
 
                 </td>
             </tr>
@@ -47,4 +47,5 @@
         </tbody>
     </table>
 </div>
+
 {% endblock %}
