--- a/templates/reservation_form.html
+++ b/templates/reservation_form.html
@@ -7,7 +7,7 @@
                     <h3 class="mb-0">Reservations</h3>
                 </div>
                 <div class="card-body">
-                    <form method="POST">
+                    <form method="POST" class="reservation-form">
                         {% csrf_token %}
                         <div class="form-group">
                             <label for="{{ form.name.id_for_label }}">Name</label>
