--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
-
+    <script src="{% static 'js/reservation_radio_tags.js' %}"></script>
     <script src="{% static 'js/generic_modal.js' %}"></script>
     <script src="{% static 'js/cancel_reservation.js' %}"></script>
     <script src="{% static 'js/reservation_form.js' %}"></script>
