--- a/templates/reservation_form.html
+++ b/templates/reservation_form.html
@@ -1,4 +1,5 @@
 {% load crispy_forms_tags %}
+{% load static %}
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-lg-6">
@@ -23,15 +24,16 @@
                         </div>
                         <div class="form-group">
                             <label for="{{ form.time.id_for_label }}">Time</label>
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <div class="btn-group btn-group-toggle d-flex flex-wrap" data-toggle="buttons">
                                 {% for radio in form.time %}
-                                <label class="btn btn-outline-primary">
+                                <label class="btn btn-outline-primary btn-radio">
                                     {{ radio.tag }}
                                     {{ radio.choice_label }}
                                 </label>
                                 {% endfor %}
                             </div>
                         </div>
+
                         <div class="form-group">
                             <label for="{{ form.special_requests.id_for_label }}">Special Request</label>
                             {{ form.special_requests|as_crispy_field }}
