Added functions to forms to check date/time and display errors, cleaned HTML and README

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,6 +46,12 @@
     color: #fff;
 }
 
+.error-msg {
+    font-size: .875em;
+    color: #dc3545;
+    font-weight: bold;
+
+}
 
 /* NAVBAR CSS STYLING */
 header {
