--- a/templates/reservation_form.html
+++ b/templates/reservation_form.html
@@ -11,19 +11,19 @@
                     <form method="POST" class="reservation-form">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="{{ form.name.id_for_label }}">Name</label>
+                            <label for="{{ form.name.id_for_label }}"></label>
                             {{ form.name|as_crispy_field }}
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.email.id_for_label }}">Email</label>
+                            <label for="{{ form.email.id_for_label }}"></label>
                             {{ form.email|as_crispy_field }}
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.date.id_for_label }}">Date</label>
+                            <label for="{{ form.date.id_for_label }}"></label>
                             {{ form.date|as_crispy_field }}
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.time.id_for_label }}">Time</label>
+                            <label for="{{ form.time.id_for_label }}">Time*</label>
                             <div class="btn-group btn-group-toggle d-flex flex-wrap" data-toggle="buttons">
                                 {% for radio in form.time %}
                                 <label class="btn btn-outline-primary btn-radio">
@@ -32,14 +32,22 @@
                                 </label>
                                 {% endfor %}
                             </div>
+                            <!-- Didplay error if booking time earlier than current time -->
+                            {% if form.time.errors %}
+                            <div class="invalid-feedback d-block error-msg">
+                                {% for error in form.time.errors %}
+                                {{ error }}
+                                {% endfor %}
+                            </div>
+                            {% endif %}
                         </div>
 
                         <div class="form-group">
-                            <label for="{{ form.special_requests.id_for_label }}">Special Request</label>
+                            <label for="{{ form.special_requests.id_for_label }}"></label>
                             {{ form.special_requests|as_crispy_field }}
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.party_size.id_for_label }}">Party Size</label>
+                            <label for="{{ form.party_size.id_for_label }}"></label>
                             {{ form.party_size|as_crispy_field }}
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
