--- a/templates/reservation_form.html
+++ b/templates/reservation_form.html
@@ -51,7 +51,8 @@
                             <label for="{{ form.party_size.id_for_label }}"></label>
                             {{ form.party_size|as_crispy_field }}
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary reservation-form-submit"
+                            id="reservation-form-submit-btn">Submit</button>
                     </form>
                 </div>
             </div>
