--- a/templates/custom_modal.html
+++ b/templates/custom_modal.html
@@ -6,7 +6,7 @@
             <div class="modal-header">
                 <h5 class="modal-title" id="cutomModalLabel">Modal Title</h5>
                 <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span id="close-modal-btn" aria-hidden="true"><i class="fas fa-times"></i></span>
                 </button>
             </div>
             <div class="modal-body">
