--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -34,7 +34,7 @@
 
 <!-- Menu Highlights -->
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Menu Specials</h2>
+    <h2 class="text-center mb-4">Menu Specials&emsp; <i class="fa-solid fa-utensils"></i></h2>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card h-100">
@@ -68,14 +68,14 @@
 
 <!-- Accordion -->
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Why Choose Us</h2>
+    <h2 class="text-center mb-4">Why Choose Us&emsp;<i class="fa-solid fa-question"></i></h2>
     <div class="accordion accordion-flush" id="accordionFlushExample">
         <!-- Accordion Item 1 -->
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Fresh Ingredients
+                    <i class="fa-solid fa-seedling"></i>&ensp;Fresh Ingredients
                 </button>
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
@@ -92,7 +92,7 @@
             <h2 class="accordion-header" id="flush-headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Exceptional Service
+                    <i class="fa-solid fa-hand-holding-heart"></i>&ensp;Exceptional Service
                 </button>
             </h2>
             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
@@ -109,7 +109,7 @@
             <h2 class="accordion-header" id="flush-headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Unique Atmosphere
+                    <i class="fa-solid fa-martini-glass-citrus"></i>&ensp; Unique Atmosphere
                 </button>
             </h2>
             <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
@@ -127,7 +127,7 @@
 
 <!-- Reviews -->
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Customer Reviews</h2>
+    <h2 class="text-center mb-4">Customer Reviews&emsp;<i class="fa-solid fa-star"></i></h2>
     <div class="row row-cols-1 row-cols-md-2 g-4">
         <!-- Review 1 -->
         <div class="col">
@@ -205,7 +205,11 @@
                 <div class="card-body">
                     <h5 class="card-title">Reservations</h5>
                     <p class="card-text">Book a table for a memorable dining experience.</p>
+                    {% if user.is_authenticated %}
                     <a href="{% url 'reservations' %}" class="btn btn-primary">Visit Reservations Page</a>
+                    {%else%}
+                    <a href="{% url 'login' %}" class="btn btn-primary">Visit Reservations Page</a>
+                    {%endif%}
                 </div>
             </div>
         </div>
