--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,23 @@
 {% extends 'base.html' %}
+
 {% load static %}
 {% load crispy_forms_tags %}
 
-
 {% block content %}
-<h2>Login</h2>
-<div class="login">
+<div class="container login-container">
+    <h2 class="login-title">Login</h2>
+    <div class="login">
 
-    <form method="post">
-        {% csrf_token %}
-        {{ form|crispy}}
-        <button class="btn btn-outline-primary" type="submit">Login</button>
-    </form>
+        <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="btn btn-primary btn-responsive login-btn" type="submit">Login</button>
+        </form>
 
-</div>
-<div class="signup-link">
-    <span>
-        <p>Need to Sign Up?</p>
-    </span>
-    <a class="btn btn-primary" role="button" href="{%url 'signup'%}">Sign
-        Up</a>
+    </div>
+    <div class="signup-section">
+        <p class="signup-text">Need to Sign Up?</p>
+        <a class="btn btn-responsive signup-btn" role="button" href="{% url 'signup' %}">Sign Up</a>
+    </div>
 </div>
 {% endblock %}
