--- a/templates/reservation_form.html
+++ b/templates/reservation_form.html
@@ -12,7 +12,7 @@
                         {% csrf_token %}
                         {{ form.non_field_errors }}
                         <div class="form-group">
-                            <label for="{{ form.name.id_for_label }}"></label>
+                            <label for="{{ form.name.id_for_label }}"><i class="fa-solid fa-user"></i></label>
                             {{ form.name|as_crispy_field }}
                             {% if form.name.errors %}
                             <div class="invalid-feedback d-block">
@@ -23,29 +23,31 @@
                             {% endif %}
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.email.id_for_label }}"></label>
+                            <label for="{{ form.email.id_for_label }}"><i class="fa-solid fa-at"></i></label>
                             {{ form.email|as_crispy_field }}
-                            {% if form.email.errors %}
+                            <!-- {% if form.email.errors %}
                             <div class="invalid-feedback d-block">
                                 {% for error in form.email.errors %}
                                 {{ error }}
                                 {% endfor %}
                             </div>
-                            {% endif %}
+                            {% endif %} -->
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.date.id_for_label }}"></label>
+                            <label for="{{ form.date.id_for_label }} "><i
+                                    class="fa-regular fa-calendar-days"></i></label>
                             {{ form.date|as_crispy_field }}
-                            {% if form.date.errors %}
+                            <!-- {% if form.date.errors %}
                             <div class="invalid-feedback d-block">
                                 {% for error in form.date.errors %}
                                 {{ error }}
                                 {% endfor %}
                             </div>
-                            {% endif %}
+                            {% endif %} -->
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.time.id_for_label }}">Time*</label>
+                            <label for="{{ form.time.id_for_label }}"><i
+                                    class="fa-regular fa-clock"></i><br>Time*</label>
                             <div class="btn-group btn-group-toggle d-flex flex-wrap" data-toggle="buttons">
                                 {% for radio in form.time %}
                                 <label class="btn btn-outline-primary btn-radio">
@@ -63,7 +65,8 @@
                             {% endif %}
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.special_requests.id_for_label }}"></label>
+                            <label for="{{ form.special_requests.id_for_label }}"><i
+                                    class="fa-regular fa-star"></i></label>
                             {{ form.special_requests|as_crispy_field }}
                             {% if form.special_requests.errors %}
                             <div class="invalid-feedback d-block">
@@ -74,7 +77,7 @@
                             {% endif %}
                         </div>
                         <div class="form-group">
-                            <label for="{{ form.party_size.id_for_label }}"></label>
+                            <label for="{{ form.party_size.id_for_label }}"><i class="fa-solid fa-users"></i></label>
                             {{ form.party_size|as_crispy_field }}
                             {% if form.party_size.errors %}
                             <div class="invalid-feedback d-block">
